...
        android:text="Bạn hãy chọn độ tuổi và giới tính"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <com.shawnlin.numberpicker.NumberPicker
        android:id = "@+id/np_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="200dp"
...
        app:np_textColor="#424242"
        app:np_value="25">

    </com.shawnlin.numberpicker.NumberPicker>

    <RadioGroup
        android:id = "@+id/rg_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/np_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Nam"
            android:checked="true"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Nữ"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Khác"
            android:gravity="center"/>
    </RadioGroup>

    <Button
        android:id="@+id/bt_age"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="button"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_age"
        app:layout_constraintBottom_toBottomOf="parent"/>
...
