...
        android:adjustViewBounds="true"
        android:src="@drawable/sapo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/et_main_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "User name"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_main_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "Email"
        app:layout_constraintStart_toStartOf="@id/et_main_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_main_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_email"/>

    <EditText
        android:id="@+id/et_main_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "Password"
        app:layout_constraintStart_toStartOf="@id/et_main_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_main_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_password"/>

    <EditText
        android:id="@+id/et_main_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
...
