<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/linear_layout">
    <TextView
        android:id="@+id/tv_adapter"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="#000000"
        android:textSize="25sp" />
</LinearLayout>